--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.13.0",
     "react-scripts": "4.0.1",
