--- a/electron/electron-builder.config.json
+++ b/electron/electron-builder.config.json
@@ -3,6 +3,7 @@
   "directories": {
     "buildResources": "resources"
   },
+  "allowRunningInsecureContent": true,
   "files": [
     "assets/**/*",
     "build/**/*",
