--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "bootstrap": "^5.2.3",
+    "brunch": "^4.0.2",
     "react": "^17.0.1",
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-icons": "^1.10.0",
@@ -39,5 +40,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-inline-source": "^4.0.0",
+    "gulp-replace": "^1.1.4",
+    "terser-brunch": "^4.1.0"
   }
 }
