--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "private": true,
   "dependencies": {
     "@msgpack/msgpack": "^2.3.0",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "bootstrap": "^5.2.3",
     "brunch": "^4.0.2",
@@ -21,7 +19,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "jest",
+    "coverage": "jest --coverage"
+
   },
   "eslintConfig": {
     "extends": [
@@ -42,9 +43,13 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^11.2.7",
     "gulp": "^4.0.2",
     "gulp-inline-source": "^4.0.0",
     "gulp-replace": "^1.1.4",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "terser-brunch": "^4.1.0"
   }
 }
