--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/user-event": "^12.5.0",
     "bootstrap": "^5.2.3",
     "brunch": "^4.0.2",
+    "chart.js": "^4.2.1",
+    "chartjs-plugin-streaming": "^2.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-icons": "^1.10.0",
@@ -18,11 +20,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "test": "jest",
+    "eject": "react-scripts eject",
     "coverage": "jest --coverage"
-
   },
   "eslintConfig": {
     "extends": [
@@ -43,13 +43,27 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.20.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.4.2",
     "gulp": "^4.0.2",
     "gulp-inline-source": "^4.0.0",
     "gulp-replace": "^1.1.4",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "terser-brunch": "^4.1.0"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
+    ]
   }
 }
