--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-icons": "^1.10.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.13.0",
     "react-scripts": "4.0.1",
