--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/user-event": "^12.5.0",
     "bootstrap": "^5.2.3",
     "brunch": "^4.0.2",
+    "extended-eventsource": "^1.4.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-icons": "^1.10.0",
