--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "els_frontend",
+  "name": "espelsfrontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@msgpack/msgpack": "^2.3.0",
+    "@msgpack/msgpack": "^3.0.0-beta2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^12.5.0",
-    "bootstrap": "^5.2.3",
-    "brunch": "^4.0.2",
-    "extended-eventsource": "^1.4.2",
-    "os-browserify": "^0.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.2",
+    "event-source-polyfill": "^1.0.31",
+    "gulp": "^4.0.2",
+    "gulp-inline-source": "^4.0.0",
+    "gulp-replace": "^1.1.4",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.0",
-    "react-bootstrap-icons": "^1.10.0",
-    "react-cookie": "^4.1.1",
+    "react-bootstrap": "^2.9.2",
+    "react-bootstrap-icons": "^1.10.3",
+    "react-cookie": "^7.0.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -22,9 +23,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
-    "eject": "react-scripts eject",
-    "coverage": "jest --coverage"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -45,20 +45,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.8",
-    "@webpack-cli/generators": "^3.0.7",
-    "babel-loader": "^9.1.3",
-    "css-loader": "^6.9.0",
-    "gulp": "^4.0.2",
-    "gulp-inline-source": "^4.0.0",
-    "gulp-replace": "^1.1.4",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "prettier": "^3.2.2",
-    "style-loader": "^3.3.4",
-    "terser-brunch": "^4.1.0",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "terser-brunch": "^4.1.0"
   }
 }
